# LogisticOptimization-_Capstone_168

./: .gitignore  LICENSE  README.md  docker-compose.yml  requirements-extras.txt  requirements-tft.txt  requirements.txt  run_demo.py
app/: config.py
app/data/: __init__.py  portwatch.py
app/ui/: build_data.py  data.json  index.html
backend/: README.md  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/pipeline/: add_hsmm_regimes.py  build_features.py  evaluate_forecasts.py  export_cache.py  export_support_cache.py  train_baseline.py  train_tft.py  validate_features.py
data/: README.md
docs/: API_CONTRACT.md  DATA_AUDIT.md  DATA_SOURCES.md  REPO_AUDIT.md
features/: News_expert_module.ipynb  economic_features.ipynb
india-portwatch/: Cargo.toml  README.md  run_dev.sh
india-portwatch-terminal/: package-lock.json  package.json
india-portwatch/backend/: Cargo.toml
india-portwatch/backend/src/: config.rs  main.rs
india-portwatch/backend/src/models/: forecast.rs  live.rs  mod.rs  news.rs  port.rs  regime.rs  scenario.rs  ship.rs  status.rs
india-portwatch/backend/src/routes/: forecasts.rs  mod.rs  ports.rs  regimes.rs  scenarios.rs  ships.rs
india-portwatch/backend/src/services/: data_loader.rs  forecast_service.rs  live_service.rs  mock.rs  mod.rs  news_service.rs  port_service.rs  regime_service.rs  scenario_service.rs  ship_service.rs  status_service.rs
models/: weather_scaler.pkl
scripts/: download_nasa_weather.py  explore_weather.py  preprocess_weather.py
src/: __init__.py
tests/: test_weather_expert.py
(+229 files in other folders)
